Ajax calls setup. Commented out extra_js on base.html temporarily to prevent the script from running twice.

--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -1836,8 +1836,6 @@ td.user-actions > span:hover {
 	width: 100px;
 }
 
-div.access-table-container {
-    height: 200px;
-    padding-bottom: 100px;
-    overflow-y: auto;
+#templateRow {
+	display:none;
 }
